--- a/NLP_Dash_APP.ipynb
+++ b/NLP_Dash_APP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNUCb8xCVA5FJ9VQ2VDkqTZ",
+      "authorship_tag": "ABX9TyPr4KSRegysXbYzxmwHNWvY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,7 @@
     {
       "cell_type": "code",
       "source": [
+        "import dash\n",
         "import plotly.express as px\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
@@ -157,37 +158,14 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    #app.run_server(debug=True)\n",
-        "    app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "OJxDfEE0556j"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Stop here"
-      ],
-      "metadata": {
-        "id": "d1LLGk84u3v2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "gMPZeUQtu34f"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "DOpDJLQ4u4Aw"
-      }
     },
     {
       "cell_type": "code",
@@ -212,15 +190,23 @@
         "    prevent_initial_call=True,\n",
         ")\n",
         "def func(n_clicks):\n",
-        "    return dcc.send_data_frame(df.to_json, \"mydf.json\")\n",
-        "\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    #app.run_server(debug=True, port=8000)\n",
-        "    app.run_server(mode='inline')"
+        "    return dcc.send_data_frame(df.to_json, \"mydf.json\")"
       ],
       "metadata": {
         "id": "WhHt2OO1OomG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "RmMG7kgPNAuz"
       },
       "execution_count": null,
       "outputs": []
@@ -250,7 +236,7 @@
       "source": [
         "#external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "all_options = {\n",
         "    'America': ['New York City', 'San Francisco', 'Cincinnati'],\n",
@@ -325,8 +311,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "8A00DGWC7HAM"
@@ -357,7 +343,7 @@
       "source": [
         "external_stylesheets = [\"https://codepen.io/chriddyp/pen/bWLwgP.css\"]\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "app.layout = html.Div([\n",
         "    dcc.Input(id=\"input-1\", type=\"text\", value=\"Montréal\"),\n",
@@ -391,9 +377,9 @@
     {
       "cell_type": "code",
       "source": [
-        "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "Ez5kmncf9sN_"
@@ -436,7 +422,7 @@
       "source": [
         "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "app.layout = html.Div([\n",
         "    dcc.Input(id='input-1-state', type='text', value='Montréal'),\n",
@@ -475,8 +461,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "DVlvgS0N_P1R"
@@ -496,7 +482,7 @@
     {
       "cell_type": "code",
       "source": [
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)"
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)"
       ],
       "metadata": {
         "id": "kz2l5pnCAlhx"
@@ -542,9 +528,9 @@
     {
       "cell_type": "code",
       "source": [
-        "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "tFCuA8dmAbW4"
@@ -555,7 +541,7 @@
     {
       "cell_type": "code",
       "source": [
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "\n",
         "my_input = dcc.Input(value='initial value', type='text')\n",
         "my_output = html.Div()\n",
@@ -576,14 +562,23 @@
         "    Input(my_input, component_property='value')\n",
         ")\n",
         "def update_output_div(input_value):\n",
-        "    return f'Output: {input_value}'\n",
-        "\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)"
+        "    return f'Output: {input_value}'\n"
       ],
       "metadata": {
         "id": "TtjyIVGjA8IR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "J5NH-r9ZNzIc"
       },
       "execution_count": null,
       "outputs": []
@@ -608,8 +603,8 @@
       "cell_type": "code",
       "source": [
         "import dash\n",
-        "import dash_core_components as dcc\n",
-        "import dash_html_components as html\n",
+        "from dash import html\n",
+        "from dash import dcc\n",
         "from dash.dependencies import Input, Output, State\n",
         "import uuid\n",
         "\n",
@@ -661,8 +656,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    #app.run_server(debug=True)\n",
-        "    app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "3NRGdMndZ9MP"
