--- a/Useful_Dash_Plotly_Examples.ipynb
+++ b/Useful_Dash_Plotly_Examples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOZhAjoY+hq9y83H/aZCkxB",
+      "authorship_tag": "ABX9TyOZixYn9qN0j0rgoFDrp0YS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This notebook has two examples of Plotly and Dash interactive visualizations. \n",
+        "This notebook has two examples of Plotly and Dash interactive visualizations.\n",
         "<br>\n",
         "1. The first prints out information about the data point when a user clicks on a datapoint. <br>\n",
-        "2. The second example updates the information displayed when the mouse hovers over a datapoint. "
+        "2. The second example updates the information displayed when the mouse hovers over a datapoint."
       ],
       "metadata": {
         "id": "Munkz7NBDDNK"
@@ -47,14 +47,14 @@
       },
       "outputs": [],
       "source": [
-        "!pip install jupyter-dash"
+        "!pip install dash"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "import plotly.express as px\n",
-        "from jupyter_dash import JupyterDash\n",
+        "import dash\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc"
@@ -86,7 +86,7 @@
         "\n",
         "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "styles = {\n",
         "    'pre': {\n",
@@ -187,14 +187,23 @@
         "    Output('relayout-data', 'children'),\n",
         "    Input('basic-interactions', 'relayoutData'))\n",
         "def display_relayout_data(relayoutData):\n",
-        "    return json.dumps(relayoutData, indent=2)\n",
-        "\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)"
+        "    return json.dumps(relayoutData, indent=2)\n"
       ],
       "metadata": {
         "id": "DrUACTg1B-H0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "4H0aArEoO1XL"
       },
       "execution_count": null,
       "outputs": []
@@ -213,7 +222,7 @@
       "source": [
         "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "df = pd.read_csv('https://plotly.github.io/datasets/country_indicators.csv')\n",
         "\n",
@@ -343,14 +352,23 @@
         "def update_x_timeseries(hoverData, yaxis_column_name, axis_type):\n",
         "    dff = df[df['Country Name'] == hoverData['points'][0]['customdata']]\n",
         "    dff = dff[dff['Indicator Name'] == yaxis_column_name]\n",
-        "    return create_time_series(dff, axis_type, yaxis_column_name)\n",
-        "\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)"
+        "    return create_time_series(dff, axis_type, yaxis_column_name)\n"
       ],
       "metadata": {
         "id": "AIeGFP3RCh6O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "YpGJ7Uy5PRLV"
       },
       "execution_count": null,
       "outputs": []
@@ -378,7 +396,7 @@
       "source": [
         "from dash import Dash, dcc, html, Input, Output\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "app.layout = html.Div([\n",
         "    html.Button(\"Download Text\", id=\"btn-download-txt\"),\n",
         "    dcc.Download(id=\"download-text\")\n",
@@ -390,13 +408,23 @@
         "    prevent_initial_call=True,\n",
         ")\n",
         "def func(n_clicks):\n",
-        "    return dict(content=\"Hello world!\", filename=\"hello.txt\")\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    app.run_server()"
+        "    return dict(content=\"Hello world!\", filename=\"hello.txt\")"
       ],
       "metadata": {
         "id": "4COjPFKMytMV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "Q5czlzAdPeJX"
       },
       "execution_count": null,
       "outputs": []
@@ -416,7 +444,7 @@
         "from dash import Dash, dcc, html, Input, Output\n",
         "import pandas as pd\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "app.layout = html.Div(\n",
         "    [\n",
         "        html.Button(\"Download CSV\", id=\"btn_csv\"),\n",
@@ -433,14 +461,23 @@
         "    prevent_initial_call=True,\n",
         ")\n",
         "def func(n_clicks):\n",
-        "    return dcc.send_data_frame(df.to_csv, \"mydf.csv\")\n",
-        "\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True)\n"
+        "    return dcc.send_data_frame(df.to_csv, \"mydf.csv\")"
       ],
       "metadata": {
         "id": "SkIvk8tQz34E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "rhs8ZBVGPouR"
       },
       "execution_count": null,
       "outputs": []
@@ -452,7 +489,7 @@
         "\n",
         "<br>\n",
         "\n",
-        "The source code for the examples can be found here: \n",
+        "The source code for the examples can be found here:\n",
         "https://github.com/plotly/dash-sample-apps/\n",
         "\n"
       ],
