--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNm+fjXo354AmbQVzfs/QfE",
+      "authorship_tag": "ABX9TyNadRoSt3hCGpV+gPwnKXss",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,8 +71,8 @@
       "cell_type": "code",
       "source": [
         "import dash\n",
-        "import dash_core_components as dcc\n",
-        "import dash_html_components as html\n",
+        "from dash import html\n",
+        "from dash import dcc\n",
         "import numpy as np"
       ],
       "metadata": {
